--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <span>
             <img id="img-hacker" src="images/hacker.png" /></span>
         </p>
-        <p id="emoji">Feeling asleep <img src="images/asleep.gif" id="asleep"></p>
+        <p id="emoji">Feeling sleepy <img src="images/asleep.gif" id="asleep"></p>
       </div>
     </div>
 
