--- a/index.html
+++ b/index.html
@@ -73,11 +73,14 @@
         <li>
           <img src="images/cyberjutsu.png" id="cbjs-post">
           <a href="">Web-App Penetration Testing Course by CyberJutsu</a>
+          <span id="category">Web</span>
           <p>June 06, 2022</p>
         </li>
         <li>
           <img src="images/hcmus-ctf-2022.png" id="hcmus-ctf-22-post">
           <a href="">HCMUS-CTF 2022</a>
+          <span id="category">Web</span>
+          <span id="category">Crypto</span>
           <p>May, 2022</p>
         </li>
         <li>
