--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
           <p>May, 2022</p>
         </li>
         <li>
+          <img src="images/rootme.svg" id="rootme-post">
+          <a href="">Rootme</a>
+          <span id="category">Web</span>
+          <p>June 18, 2022</p>
+        </li>
+        <li>
           <a href="">Coming Up</a>
           <p>?, 2022</p>
         </li>
