--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   </header>
 
   <main>
+    <embed src="songs/ThoEr.mp3" loop="true" autostart="true" width="0" height="0">
     <div id="gioithieu" class="container text-center">
       <img id="img-myself" src="177977144_2927998720810600_8610264404561396818_n.jpg" />
       <div id="content-profile">
@@ -72,20 +73,21 @@
       <ul id="post" class="">
         <li>
           <img src="images/cyberjutsu.png" id="cbjs-post">
-          <a href="">Web-App Penetration Testing Course by CyberJutsu</a>
+          <a target="_blank" href="https://github.com/nqdinh-1203/web-pentest-cbjs/tree/main/writeups">Web-App Penetration Testing Course
+            by CyberJutsu</a>
           <span id="category">Web</span>
           <p>June 06, 2022</p>
         </li>
         <li>
           <img src="images/hcmus-ctf-2022.png" id="hcmus-ctf-22-post">
-          <a href="">HCMUS-CTF 2022</a>
+          <a target="_blank" href="https://github.com/nqdinh-1203/hcmus-ctf">HCMUS-CTF 2022</a>
           <span id="category">Web</span>
           <span id="category">Crypto</span>
           <p>May, 2022</p>
         </li>
         <li>
           <img src="images/rootme.svg" id="rootme-post">
-          <a href="">Rootme</a>
+          <a target="_blank" href="https://github.com/nqdinh-1203/rootme">Rootme</a>
           <span id="category">Web</span>
           <p>June 18, 2022</p>
         </li>
@@ -140,7 +142,7 @@
     </section>
 
     <div id="touch" class="container text-center pb-4">
-      <embed src="songs/Querry.mp3" loop="true" autostart="true" width="0" height="0">
+      <!-- <embed src="songs/Querry.mp3" loop="true" autostart="true" width="0" height="0"> -->
       <!-- <h2>
         <span><img id="img-hacker-2" src="pngaaa.com-5195813.png" /></span>
         Get In Touch
@@ -202,17 +204,17 @@
     </div>
   </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+    crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
